Disable ticker preference [2/2]
Source Liquid

--- a/res/xml/liquid_statusbar_settings.xml
+++ b/res/xml/liquid_statusbar_settings.xml
@@ -69,6 +69,12 @@
             android:persistent="false" />
 
         <CheckBoxPreference
+            android:key="ticker_disabled"
+            android:title="@string/ticker_disabled_title"
+            android:summary="@string/ticker_disabled_summary"
+            android:defaultValue="false" />
+
+        <CheckBoxPreference
             android:key="toggle_carrier_logo"
             android:summary="@string/carrier_logo_summary"
             android:title="@string/disable_carrier_logo"
