--- a/res/values/liquid_strings.xml
+++ b/res/values/liquid_strings.xml
@@ -67,7 +67,7 @@
 
     <!-- Advanced settings -->
     <string name="active_display_title">Active display</string>
-    <string name="halo_options_title">Halo options</string>
+    <string name="halo_options_title">Halo Settings</string>
     <string name="notification_drawer_title">Notification drawer</string>
     <string name="theme_settings_title">Total blackout</string>
 
@@ -1883,7 +1883,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="lockpassword_gesture_set_toast">Gesture has been set</string>
     <string name="lockpassword_confirm_your_gesture_header">Confirm your gesture</string>
     <string name="lockpassword_choose_your_gesture_header">Draw your gesture</string>
-    <string name="unlock_set_unlock_gesture_title">Gesture</string>
+    <string name="unlock_set_unlock_gesture_title">Gesture (Unsecure)</string>
     <string name="unlock_set_unlock_gesture_summary">Low security, experimental</string>
     <string name="unlock_set_unlock_mode_gesture">Gesture</string>
 
