--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -181,6 +181,13 @@
     <header android:id="@+id/personal_section"
         android:title="@string/header_category_personal" />
 
+    <!--  ACCOUNTS section -->
+    <header
+        android:id="@+id/account_settings"
+        android:title="@string/account_settings"
+        android:icon="@drawable/ic_settings_accounts"
+        android:fragment="com.android.settings.accounts.AccountsSettings" />
+
     <!-- Security -->
     <header
         settings:includeXmlForSearch="@xml/security_settings"
@@ -226,18 +233,12 @@
         android:title="@string/privacy_settings"
         android:id="@+id/privacy_settings" />
 
-    <!--  ACCOUNTS section -->
+    <!-- Manage NFC payment apps -->
     <header
-            android:id="@+id/account_settings"
-            android:title="@string/account_settings" />
-
-    <header
-            android:id="@+id/account_add"
-            android:title="@string/add_account_label"
-            android:icon="@drawable/ic_menu_add_dark">
-        <intent
-            android:action="android.settings.ADD_ACCOUNT_SETTINGS"/>
-    </header>
+        android:fragment="com.android.settings.nfc.PaymentSettings"
+        android:icon="@drawable/ic_settings_nfc_payment"
+        android:title="@string/nfc_payment_settings_title"
+        android:id="@+id/nfc_payment_settings" />
 
     <!-- SYSTEM -->
     <header android:id="@+id/system_section"
