--- a/res/values-de/liquid_strings.xml
+++ b/res/values-de/liquid_strings.xml
@@ -784,7 +784,7 @@ Zusätzliche Optionen werden durch Gedrückthalten der Zeile angezeigt. Mit \"Be
   <string name="less_notification_sounds_1m">1 Minute</string>
   <string name="less_notification_sounds_2m">2 Minuten</string>
   <string name="less_notification_sounds_5m">5 Minuten</string>
-  <string name="quick_settings_title">Pulldown Einstellungen</string>
+  <string name="quick_settings_title">Schnelleinstellungen</string>
   <string name="tile_picker_title">Kacheln und Layout</string>
   <string name="tile_picker_summary">Anzeigekacheln anzeigen, auswähle und ändern</string>
   <string name="tile_choose_title">Kachel auswählen</string>
