--- a/res/values/liquid_strings.xml
+++ b/res/values/liquid_strings.xml
@@ -68,7 +68,6 @@
     <!-- Advanced settings -->
     <string name="active_display_title">Active display</string>
     <string name="halo_options_title">Halo Settings</string>
-    <string name="notification_drawer_title">Notification drawer</string>
     <string name="theme_settings_title">Total blackout</string>
 
     <!-- Device settings -->
@@ -577,7 +576,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
 
     <!-- Notification drawer settings  -->
     <string name="notification_drawer_qs_title">Notification &amp; QS drawer</string>
-    <string name="notification_drawer_title">Notification drawer</string>
+    <string name="notification_drawer_title">Pulldown</string>
     <string name="notification_drawer_summary">Configure or view notification drawer settings</string>
     <string name="notification_shortcuts_settings_title">Shortcuts</string>
     <string name="notification_shortcuts_settings_summary">Show shortcuts in the notification drawer</string>
