Revert "Remove DisplayCalibration"
This reverts commit 7eae1fbf685853090db6c388fe5cc4291ccaf414.

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -95,6 +95,20 @@
                 android:targetClass="com.android.settings.ScreenColorSettings" />
         </PreferenceScreen>
 
+        <com.android.settings.hardware.DisplayColor
+                android:key="color_calibration"
+                android:title="@string/color_calibration_title"
+                android:dialogTitle="@string/color_calibration_title"
+                android:summary="@string/color_calibration_summary"
+                android:persistent="false" />
+
+        <com.android.settings.hardware.DisplayGamma
+                android:key="gamma_tuning"
+                android:title="@string/gamma_tuning_title_head"
+                android:dialogTitle="@string/gamma_tuning_title_head"
+                android:summary="@string/gamma_tuning_summary_head"
+                android:persistent="false" />
+
         <PreferenceScreen
                 android:key="screen_recorder"
                 android:title="@string/screen_recorder_title"
