--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2014 SlimRoms Project
-
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -95,20 +92,6 @@
                 android:targetClass="com.android.settings.ScreenColorSettings" />
         </PreferenceScreen>
 
-        <com.android.settings.hardware.DisplayColor
-                android:key="color_calibration"
-                android:title="@string/color_calibration_title"
-                android:dialogTitle="@string/color_calibration_title"
-                android:summary="@string/color_calibration_summary"
-                android:persistent="false" />
-
-        <com.android.settings.hardware.DisplayGamma
-                android:key="gamma_tuning"
-                android:title="@string/gamma_tuning_title_head"
-                android:dialogTitle="@string/gamma_tuning_title_head"
-                android:summary="@string/gamma_tuning_summary_head"
-                android:persistent="false" />
-
         <PreferenceScreen
                 android:key="screen_recorder"
                 android:title="@string/screen_recorder_title"
@@ -159,6 +142,73 @@
                 android:title="@string/double_tap_to_wake_title" />
 
         </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="category_animation_options"
+        android:title="@string/display_category_animation_options_title" >
+
+        <PreferenceScreen
+            android:key="animation_controls"
+            android:title="@string/animation_controls_title"
+            android:summary="@string/animation_controls_summary"
+            android:fragment="com.android.settings.liquid.AnimationControls" />
+
+        <ListPreference
+            android:key="system_power_crt_mode"
+            android:dialogTitle="@string/system_power_crt_mode_dialog_title"
+            android:title="@string/system_power_crt_mode_title"
+            android:entries="@array/entries_system_power_crt_mode"
+            android:entryValues="@array/values_system_power_crt_mode" />
+
+        <PreferenceScreen
+            android:key="interface_animation_scroll"
+            android:fragment="com.android.settings.liquid.KeyboardAnimationInterfaceSettings"
+            android:title="@string/ime_animation_title"
+            android:summary="@string/ime_animation_summary" />
+
+        <ListPreference
+            android:key="listview_animation"
+            android:dialogTitle="@string/listview_animation_title"
+            android:title="@string/listview_animation_title"
+            android:entries="@array/listview_animation_entries"
+            android:entryValues="@array/listview_animation_values"
+            android:defaultValue="0" />
+
+        <ListPreference
+            android:key="listview_interpolator"
+            android:dialogTitle="@string/listview_interpolator_title"
+            android:title="@string/listview_interpolator_title"
+            android:entries="@array/listview_interpolator_entries"
+            android:entryValues="@array/listview_interpolator_values"
+            android:defaultValue="0" />
+
+        <PreferenceScreen
+            android:key="overscroll_effects"
+            android:title="@string/ui_overscroll_title"
+            android:summary="@string/overscroll_weight_summary"
+            android:fragment="com.android.settings.liquid.OverscrollEffects" />
+
+        <PreferenceScreen
+            android:key="progressbar_settings"
+            android:title="@string/progressbar_title"
+            android:summary="@string/progressbar_summary"
+            android:fragment="com.android.settings.liquid.ProgressBar" />
+
+        <PreferenceScreen
+            android:key="interface_animation_scroll"
+            android:fragment="com.android.settings.liquid.ScrollAnimationInterfaceSettings"
+            android:title="@string/scrolling_title"
+            android:summary="@string/scrolling_summary" />
+
+        <ListPreference
+            android:key="toast_animation"
+            android:title="@string/toast_animation_title"
+            android:entries="@array/toast_animation_entries"
+            android:entryValues="@array/toast_animation_values"
+            android:persistent="false"
+            android:summary="@string/toast_animation_summary" />
+
+    </PreferenceCategory>
 
         <PreferenceCategory
             android:key="category_wakeup_options"
