--- a/res/values/liquid_strings.xml
+++ b/res/values/liquid_strings.xml
@@ -2302,6 +2302,8 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="heads_up_floating_window_summary">Open heads up in floating window</string>
     <string name="heads_up_exclude_from_lock_screen_title">Disable on lock screen</string>
     <string name="heads_up_exclude_from_lock_screen_summary">Hide notifications on lock screen</string>
+	<string name="heads_up_bg_color_title">Background color</string>
+    <string name="heads_up_text_color_title">Text color</string>
 
     <!-- Text for disabling immersive mode messages -->
     <string name="disable_immersive_message_title">Disable Immersive Mode Messages</string>
