--- a/res/xml/headsup_settings.xml
+++ b/res/xml/headsup_settings.xml
@@ -53,6 +53,18 @@
         android:summary="@string/heads_up_gravity_summary"
         android:persistent="false"
         android:defaultValue="false" />
+	
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="heads_up_bg_color"
+        android:title="@string/heads_up_bg_color_title"
+        android:defaultValue="0x00ffffff"
+        alphaSlider="true" />
+
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="heads_up_text_color"
+        android:title="@string/heads_up_text_color_title"
+        android:defaultValue="0"
+        alphaSlider="true" />	
 
     <ListPreference
         android:key="heads_up_snooze_time"
