--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -35,7 +35,13 @@
         <intent android:action="android.intent.action.MAIN"
 				android:targetClass="com.vipercn.viper4android_v2.activity.ViPER4Android"
                 android:targetPackage="com.vipercn.viper4android_v2" />
-    </Preference>        
+    </Preference>      
+  			
+	<net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="volume_panel_bg_color"
+            android:title="@string/volume_panel_bg_color_title"
+            android:defaultValue="0x00ffffff"
+            alphaSlider="true" />	
            
     <PreferenceCategory
             android:key="category_calls_and_notification"
@@ -96,7 +102,7 @@
             android:key="emergency_tone"
             android:title="@string/emergency_tone_title"
             android:entries="@array/emergency_tone_entries"
-            android:entryValues="@array/emergency_tone_values" />
+            android:entryValues="@array/emergency_tone_values" />		
 
     <!-- Dock -->
     <PreferenceCategory
