--- a/res/xml/recent_panel_settings.xml
+++ b/res/xml/recent_panel_settings.xml
@@ -28,8 +28,6 @@
         android:summary="@string/custom_recent_summary"
         android:persistent="false" />
         
-     
-
     <ListPreference
         android:key="recent_panel_expanded_mode"
         android:entries="@array/recent_panel_expanded_mode_entries"
@@ -69,6 +67,18 @@
         alphaSlider="true"
         android:dependency="custom_recent_mode" />
 		
+	<net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="recent_card_bg_color"
+        android:title="@string/recent_card_bg_color_title"
+        android:defaultValue="0x00ffffff"
+        alphaSlider="true" />
+
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="recent_card_text_color"
+        android:title="@string/recent_card_text_color_title"
+        android:defaultValue="0x00ffffff"
+        alphaSlider="true" />	
+	
 	</PreferenceCategory>	
 
 	<!--<PreferenceCategory
