--- a/res/values/liquid_strings.xml
+++ b/res/values/liquid_strings.xml
@@ -1194,7 +1194,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="recent_panel_100">100% (default)</string>
     <string name="recent_panel_85">85%</string>
     <string name="recent_panel_70">70%</string>
-	<string name="trds_default_color">TRDS default</string>
+	<string name="trds_default_color">Default</string>
 
     <!-- Recent apps mode -->
     <string name="recent_panel_expanded_mode_title">Expanded mode</string>
