--- a/res/xml/headsup_settings.xml
+++ b/res/xml/headsup_settings.xml
@@ -18,6 +18,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/heads_up_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+	
+	<Preference 
+	    android:fragment="com.android.settings.applications.ManageApplications"
+        android:title="@string/add_headsup_apps"
+		android:summary="@string/add_headsup_apps_summary"
+        android:id="@+id/application_settings" />
 
     <CheckBoxPreference
         android:key="heads_up_exclude_from_lock_screen"
