--- a/res/xml/liquid_main_settings.xml
+++ b/res/xml/liquid_main_settings.xml
@@ -19,15 +19,13 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/liquid_settings_title" >
     
-    <!-- RomControl -->
-    <Preference
+    <!-- CyanHacker Apps -->
+    <PreferenceScreen
+		android:id="@+id/cyanhacker_apps"
     	android:icon="@drawable/ic_romco" 
-    	android:title="@string/rom_control">
-        <intent 
-            android:targetPackage="com.hrt.romcontrol" 
-            android:action="android.intent.action.MAIN" 
-            android:targetClass="com.hrt.romcontrol.SplashScreen" />
-    </Preference>
+    	android:title="@string/rom_control"
+		settings:includeXmlForSearch="@xml/cyanhacker_apps"
+		android:fragment="com.android.settings.hacker.CyanHackerApps"/>
 
     <!-- Interface -->
     <PreferenceScreen
